--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "idb": "^8.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-canny": "^0.0.7",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.2",
     "zipyai": "^1.7.34"
