--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
   "background_color": "#ffffff",
   "theme_color": "#2463EB",
   "icons": [
-    {
+    { 
       "src": "pwa-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
@@ -18,6 +18,12 @@
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
+    },
+    {
+      "src": "apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "apple touch icon"
     }
   ]
 }
