--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@headlessui/react": "^2.2.0",
     "@supabase/supabase-js": "^2.39.7",
     "idb": "^8.0.0",
     "lottie-react": "^2.4.0",
@@ -26,9 +27,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/mixpanel-browser": "^2.49.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/mixpanel-browser": "^2.49.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
