--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-canny": "^0.0.7",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.2",
+    "recharts": "^2.15.0",
     "zipyai": "^1.7.34"
   },
   "devDependencies": {
