--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.2",
     "recharts": "^2.15.0",
+    "workbox-core": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
     "zipyai": "^1.7.34"
   },
   "devDependencies": {
@@ -42,6 +44,6 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2",
-    "vite-plugin-pwa": "^0.19.2"
+    "vite-plugin-pwa": "^0.17.0"
   }
 }
