--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "react": "^18.3.1",
     "react-canny": "^0.0.7",
     "react-dom": "^18.3.1",
+    "react-remove-scroll": "^2.6.2",
     "react-router-dom": "^6.22.2",
     "recharts": "^2.15.0",
+    "workbox-cacheable-response": "^7.3.0",
     "workbox-core": "^7.3.0",
+    "workbox-expiration": "^7.3.0",
     "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0",
     "zipyai": "^1.7.34"
   },
   "devDependencies": {
