--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.2.0",
     "@supabase/supabase-js": "^2.39.7",
+    "framer-motion": "^12.4.10",
+    "html-to-image": "^1.11.13",
     "idb": "^8.0.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.344.0",
