--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-remove-scroll": "^2.6.2",
     "react-router-dom": "^6.22.2",
+    "react-spring": "^9.7.5",
     "recharts": "^2.15.0",
     "workbox-cacheable-response": "^7.3.0",
     "workbox-core": "^7.3.0",
