--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -2,6 +2,7 @@ App/build
 App/Pods
 App/output
 App/App/public
+App/Logday/public
 DerivedData
 xcuserdata
 
@@ -11,3 +12,5 @@ capacitor-cordova-ios-plugins
 # Generated Config files
 App/App/capacitor.config.json
 App/App/config.xml
+App/Logday/capacitor.config.json
+App/Logday/config.xml
