--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     "idb": "^8.0.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.344.0",
+    "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-canny": "^0.0.7",
     "react-dom": "^18.3.1",
     "react-remove-scroll": "^2.6.2",
     "react-router-dom": "^6.22.2",
+    "react-shepherd": "^6.1.8",
     "react-spring": "^9.7.5",
     "recharts": "^2.15.0",
+    "shepherd.js": "^14.5.0",
     "workbox-cacheable-response": "^7.3.0",
     "workbox-core": "^7.3.0",
     "workbox-expiration": "^7.3.0",
