--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ dist-ssr
 
 # Add to .gitignore
 .env
+.env.example
 .env.local
 .env.example
 .env.*.local
@@ -34,3 +35,6 @@ dist-ssr
 
 # Local Netlify folder
 .netlify
+
+# Local testing folder
+.testing
