--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@headlessui/react": "^2.2.0",
     "@supabase/supabase-js": "^2.39.7",
     "framer-motion": "^12.4.10",
+    "fuse.js": "^7.1.0",
     "idb": "^8.0.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.344.0",
