--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@headlessui/react": "^2.2.0",
     "@supabase/supabase-js": "^2.39.7",
+    "axios": "^1.9.0",
     "framer-motion": "^12.4.10",
     "fuse.js": "^7.1.0",
     "idb": "^8.0.0",
@@ -33,9 +34,11 @@
     "react": "^18.3.1",
     "react-canny": "^0.0.7",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-remove-scroll": "^2.6.2",
     "react-router-dom": "^6.22.2",
     "recharts": "^2.15.0",
+    "remark-gfm": "^4.0.1",
     "shepherd.js": "^14.5.0",
     "workbox-cacheable-response": "^7.3.0",
     "workbox-core": "^7.3.0",
@@ -49,6 +52,7 @@
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
