iOS implementation cleaned up
Regenerate iOS package

--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -3,9 +3,6 @@ require_relative '../../node_modules/@capacitor/ios/scripts/pods_helpers'
 platform :ios, '14.0'
 use_frameworks!
 
-# Specify the project explicitly
-project 'Logday.xcodeproj'
-
 # workaround to avoid Xcode caching of Pods that requires
 # Product -> Clean Build Folder after new Cordova plugins installed
 # Requires CocoaPods 1.6 or newer
@@ -21,7 +18,7 @@ def capacitor_pods
   pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
 end
 
-target 'Logday' do
+target 'App' do
   capacitor_pods
   # Add your Pods here
 end
