--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@google/generative-ai": "^0.24.1",
     "@headlessui/react": "^2.2.0",
     "@supabase/supabase-js": "^2.39.7",
     "framer-motion": "^12.4.10",
